--- a/docs/bibtex/ref.bib
+++ b/docs/bibtex/ref.bib
@@ -1,8 +1,212 @@
- @article{singletCode_bioarxiv, 
- title={singletCode: synthetic barcodes identify singlets in scRNA-seq datasets and evaluate doublet algorithms}, url={https://www.biorxiv.org/content/early/2023/08/07/2023.08.04.552078}, DOI={10.1101/2023.08.04.552078}, abstractNote={Single-cell RNA sequencing datasets comprise true single cells, or singlets, in addition to cells that coalesce during the protocol, or doublets. Identifying singlets with high fidelity in single-cell RNA sequencing is necessary to avoid false negative and false positive discoveries. Although several methodologies have been proposed to infer true singlets and doublets, they typically rely on datasets being highly heterogeneous. Here we develop and apply singletCode, a computational framework that leverages datasets with synthetically introduced DNA barcodes for a hitherto unexplored application: to extract ground truth singlets. We demonstrate the feasibility of singlets extracted via singletCode to evaluate the performance and robustness of existing doublet detection methods. We find that existing doublet detection methods are not as sensitive as expected when tested on doublets simulated from experimentally realistic ground truth singlets. As DNA barcoded datasets are being increasingly reported, singletCode can identify singlets and inform rational choice of doublet detecting algorithms and their associated limitations.Competing Interest StatementYG received consultancy fees from the Schmidt Science Fellows. All other authors declare no conflict of interest.}, journal={bioRxiv}, publisher={Cold Spring Harbor Laboratory}, author={Zhang, Ziyang and Melzer, Madeline E. and Kiani, Karun and Goyal, Yogesh}, year={2023} }
+@ARTICLE{Cui2016-ly,
+  title    = "Clumping and Viability of Bone Marrow Derived Mesenchymal Stromal
+              Cells under Different Preparation Procedures: A Flow
+              {Cytometry-Based} In Vitro Study",
+  author   = "Cui, Li-Li and Kinnunen, Tuure and Boltze, Johannes and Nystedt,
+              Johanna and Jolkkonen, Jukka",
+  abstract = "Complications of microocclusions have been reported after
+              intra-arterial delivery of mesenchymal stromal cells. Hence,
+              quantification and efficient limitation of cell clumps in
+              suspension before transplantation is important to reduce the
+              risk. We used a flow cytometry-based pulse-width assay to assess
+              the effects of different cell suspension concentrations (0.2-2.0
+              $\times$ 10(6)/mL), storage solutions (complete growth medium,
+              Dulbecco's phosphate-buffered saline, and normal saline), storage
+              time in suspension (0-9 h), and freeze-thawing procedure on the
+              clumping of rat bone marrow derived mesenchymal stromal cells
+              (BMMSCs) and also evaluated cell viability at the same time.
+              Surprisingly, increasing the cell concentration did not result in
+              more cell clumps in vitro. Freshly harvested (fresh) cells in
+              normal saline had significantly fewer cell clumps and also
+              displayed high viability (>90\%). A time-dependent reduction in
+              viability was observed for cells in all three storage solutions,
+              without any significant change in the clumping tendency except
+              for cells in medium. Fresh cells were more viable than their
+              frozen-thawed counterparts, and fresh cells in normal saline had
+              fewer cell clumps. In conclusion, cell clumping and viability
+              could be affected by different cell preparation procedures, and
+              quantification of cell clumping can be conducted using the flow
+              cytometry-based pulse-width assay before intra-arterial cell
+              delivery.",
+  journal  = "Stem Cells Int.",
+  volume   =  2016,
+  pages    = "1764938",
+  month    =  feb,
+  year     =  2016,
+  language = "en"
+}
 
-  @article{Bernstein_Fong_Lam_Roy_Hendrickson_Kelley_2020, title={Solo: Doublet Identification in Single-Cell RNA-Seq via Semi-Supervised Deep Learning}, volume={11}, ISSN={2405-4720}, DOI={10.1016/j.cels.2020.05.010}, abstractNote={Single-cell RNA sequencing (scRNA-seq) measurements of gene expression enable an unprecedented high-resolution view into cellular state. However, current methods often result in two or more cells that share the same cell-identifying barcode; these “doublets” violate the fundamental premise of single-cell technology and can lead to incorrect inferences. Here, we describe Solo, a semi-supervised deep learning approach that identifies doublets with greater accuracy than existing methods. Solo embeds cells unsupervised using a variational autoencoder and then appends a feed-forward neural network layer to the encoder to form a supervised classifier. We train this classifier to distinguish simulated doublets from the observed data. Solo can be applied in combination with experimental doublet detection methods to further purify scRNA-seq data to true single cells. It is freely available from https://github.com/calico/solo. A record of this paper’s transparent peer review process is included in the Supplemental Information.}, number={1}, journal={Cell Systems}, author={Bernstein, Nicholas J. and Fong, Nicole L. and Lam, Irene and Roy, Margaret A. and Hendrickson, David G. and Kelley, David R.}, year={2020}, month=jul, pages={95-101.e5}, language={eng} }
+@ARTICLE{Kuonen2010-hj,
+  title    = "Fc block treatment, dead cells exclusion, and cell aggregates
+              discrimination concur to prevent phenotypical artifacts in the
+              analysis of subpopulations of tumor-infiltrating {CD11b(+})
+              myelomonocytic cells",
+  author   = "Kuonen, Francois and Touvrey, Cedric and Laurent, Julien and
+              Ruegg, Curzio",
+  abstract = "It is well established that cancer cells can recruit CD11b(+)
+              myeloid cells to promote tumor angiogenesis and tumor growth.
+              Increasing interest has emerged on the identification of
+              subpopulations of tumor-infiltrating CD11b(+) myeloid cells using
+              flow cytometry techniques. In the literature, however,
+              discrepancies exist on the phenotype of these cells (Coffelt et
+              al., Am J Pathol 2010;176:1564-1576). Since flow cytometry
+              analysis requires particular precautions for accurate sample
+              preparation and trustable data acquisition, analysis, and
+              interpretation, some discrepancies might be due to technical
+              reasons rather than biological grounds. We used the syngenic
+              orthotopic 4T1 mammary tumor model in immunocompetent BALB/c mice
+              to analyze and compare the phenotype of CD11b(+) myeloid cells
+              isolated from peripheral blood and from tumors, using six-color
+              flow cytometry. We report here that the nonspecific antibody
+              binding through Fc receptors, the presence of dead cells and cell
+              doublets in tumor-derived samples concur to generate artifacts in
+              the phenotype of tumor-infiltrating CD11b(+) subpopulations. We
+              show that the heterogeneity of tumor-infiltrating CD11b(+)
+              subpopulations analyzed without particular precautions was
+              greatly reduced upon Fc block treatment, dead cells, and cell
+              doublets exclusion. Phenotyping of tumor-infiltrating CD11b(+)
+              cells was particularly sensitive to these parameters compared to
+              circulating CD11b(+) cells. Taken together, our results identify
+              Fc block treatment, dead cells, and cell doublets exclusion as
+              simple but crucial steps for the proper analysis of
+              tumor-infiltrating CD11b(+) cell populations.",
+  journal  = "Cytometry A",
+  volume   =  77,
+  number   =  11,
+  pages    = "1082--1090",
+  month    =  nov,
+  year     =  2010,
+  language = "en"
+}
 
-   @article{Xi_Li_2021, title={Benchmarking Computational Doublet-Detection Methods for Single-Cell RNA Sequencing Data}, volume={12}, ISSN={2405-4720}, DOI={10.1016/j.cels.2020.11.008}, abstractNote={In single-cell RNA sequencing (scRNA-seq), doublets form when two cells are encapsulated into one reaction volume. The existence of doublets, which appear to be-but are not-real cells, is a key confounder in scRNA-seq data analysis. Computational methods have been developed to detect doublets in scRNA-seq data; however, the scRNA-seq field lacks a comprehensive benchmarking of these methods, making it difficult for researchers to choose an appropriate method for specific analyses. We conducted a systematic benchmark study of nine cutting-edge computational doublet-detection methods. Our study included 16 real datasets, which contained experimentally annotated doublets, and 112 realistic synthetic datasets. We compared doublet-detection methods regarding detection accuracy under various experimental settings, impacts on downstream analyses, and computational efficiencies. Our results show that existing methods exhibited diverse performance and distinct advantages in different aspects. Overall, the DoubletFinder method has the best detection accuracy, and the cxds method has the highest computational efficiency. A record of this paper’s transparent peer review process is included in the Supplemental Information.}, number={2}, journal={Cell Systems}, author={Xi, Nan Miles and Li, Jingyi Jessica}, year={2021}, month=feb, pages={176-194.e6}, language={eng} }
 
-    @article{Luecken_Theis_2019, title={Current best practices in single-cell RNA-seq analysis: a tutorial}, volume={15}, ISSN={1744-4292}, DOI={10.15252/msb.20188746}, abstractNote={Single-cell RNA-seq has enabled gene expression to be studied at an unprecedented resolution. The promise of this technology is attracting a growing user base for single-cell analysis methods. As more analysis tools are becoming available, it is becoming increasingly difficult to navigate this landscape and produce an up-to-date workflow to analyse one’s data. Here, we detail the steps of a typical single-cell RNA-seq analysis, including pre-processing (quality control, normalization, data correction, feature selection, and dimensionality reduction) and cell- and gene-level downstream analysis. We formulate current best-practice recommendations for these steps based on independent comparison studies. We have integrated these best-practice recommendations into a workflow, which we apply to a public dataset to further illustrate how these steps work in practice. Our documented case study can be found at https://www.github.com/theislab/single-cell-tutorial This review will serve as a workflow tutorial for new entrants into the field, and help established users update their analysis pipelines.}, number={6}, journal={Molecular Systems Biology}, author={Luecken, Malte D. and Theis, Fabian J.}, year={2019}, month=jun, pages={e8746}, language={eng} }
+@ARTICLE{Bernstein2020-fa,
+  title    = "Solo: Doublet Identification in {Single-Cell} {RNA-Seq} via
+              {Semi-Supervised} Deep Learning",
+  author   = "Bernstein, Nicholas J and Fong, Nicole L and Lam, Irene and Roy,
+              Margaret A and Hendrickson, David G and Kelley, David R",
+  abstract = "Single-cell RNA sequencing (scRNA-seq) measurements of gene
+              expression enable an unprecedented high-resolution view into
+              cellular state. However, current methods often result in two or
+              more cells that share the same cell-identifying barcode; these
+              ``doublets'' violate the fundamental premise of single-cell
+              technology and can lead to incorrect inferences. Here, we
+              describe Solo, a semi-supervised deep learning approach that
+              identifies doublets with greater accuracy than existing methods.
+              Solo embeds cells unsupervised using a variational autoencoder
+              and then appends a feed-forward neural network layer to the
+              encoder to form a supervised classifier. We train this classifier
+              to distinguish simulated doublets from the observed data. Solo
+              can be applied in combination with experimental doublet detection
+              methods to further purify scRNA-seq data to true single cells. It
+              is freely available from https://github.com/calico/solo. A record
+              of this paper's transparent peer review process is included in
+              the Supplemental Information.",
+  journal  = "Cell Syst",
+  volume   =  11,
+  number   =  1,
+  pages    = "95--101.e5",
+  month    =  jul,
+  year     =  2020,
+  keywords = "deep learning; doublet; semi-supervised learning; single-cell
+              RNA-seq",
+  language = "en"
+}
+
+@ARTICLE{Xi2021-md,
+  title    = "Benchmarking Computational {Doublet-Detection} Methods for
+              {Single-Cell} {RNA} Sequencing Data",
+  author   = "Xi, Nan Miles and Li, Jingyi Jessica",
+  abstract = "In single-cell RNA sequencing (scRNA-seq), doublets form when two
+              cells are encapsulated into one reaction volume. The existence of
+              doublets, which appear to be-but are not-real cells, is a key
+              confounder in scRNA-seq data analysis. Computational methods have
+              been developed to detect doublets in scRNA-seq data; however, the
+              scRNA-seq field lacks a comprehensive benchmarking of these
+              methods, making it difficult for researchers to choose an
+              appropriate method for specific analyses. We conducted a
+              systematic benchmark study of nine cutting-edge computational
+              doublet-detection methods. Our study included 16 real datasets,
+              which contained experimentally annotated doublets, and 112
+              realistic synthetic datasets. We compared doublet-detection
+              methods regarding detection accuracy under various experimental
+              settings, impacts on downstream analyses, and computational
+              efficiencies. Our results show that existing methods exhibited
+              diverse performance and distinct advantages in different aspects.
+              Overall, the DoubletFinder method has the best detection
+              accuracy, and the cxds method has the highest computational
+              efficiency. A record of this paper's transparent peer review
+              process is included in the Supplemental Information.",
+  journal  = "Cell Syst",
+  volume   =  12,
+  number   =  2,
+  pages    = "176--194.e6",
+  month    =  feb,
+  year     =  2021,
+  keywords = "cell clustering; differential gene expression; doublet detection;
+              parallel computing; reproducibility; scRNA-seq; software
+              implementation; trajectory inference",
+  language = "en"
+}
+
+@ARTICLE{Finak2015-bh,
+  title    = "{MAST}: a flexible statistical framework for assessing
+              transcriptional changes and characterizing heterogeneity in
+              single-cell {RNA} sequencing data",
+  author   = "Finak, Greg and McDavid, Andrew and Yajima, Masanao and Deng,
+              Jingyuan and Gersuk, Vivian and Shalek, Alex K and Slichter,
+              Chloe K and Miller, Hannah W and McElrath, M Juliana and Prlic,
+              Martin and Linsley, Peter S and Gottardo, Raphael",
+  abstract = "Single-cell transcriptomics reveals gene expression heterogeneity
+              but suffers from stochastic dropout and characteristic bimodal
+              expression distributions in which expression is either strongly
+              non-zero or non-detectable. We propose a two-part, generalized
+              linear model for such bimodal data that parameterizes both of
+              these features. We argue that the cellular detection rate, the
+              fraction of genes expressed in a cell, should be adjusted for as
+              a source of nuisance variation. Our model provides gene set
+              enrichment analysis tailored to single-cell data. It provides
+              insights into how networks of co-expressed genes evolve across an
+              experimental treatment. MAST is available at
+              https://github.com/RGLab/MAST .",
+  journal  = "Genome Biol.",
+  volume   =  16,
+  pages    = "278",
+  month    =  dec,
+  year     =  2015,
+  language = "en"
+}
+
+@ARTICLE{Fay2010-hf,
+  title    = "{Wilcoxon-Mann-Whitney} or t-test? On assumptions for hypothesis
+              tests and multiple interpretations of decision rules",
+  author   = "Fay, Michael P and Proschan, Michael A",
+  abstract = "In a mathematical approach to hypothesis tests, we start with a
+              clearly defined set of hypotheses and choose the test with the
+              best properties for those hypotheses. In practice, we often start
+              with less precise hypotheses. For example, often a researcher
+              wants to know which of two groups generally has the larger
+              responses, and either a t-test or a Wilcoxon-Mann-Whitney (WMW)
+              test could be acceptable. Although both t-tests and WMW tests are
+              usually associated with quite different hypotheses, the decision
+              rule and p-value from either test could be associated with many
+              different sets of assumptions, which we call perspectives. It is
+              useful to have many of the different perspectives to which a
+              decision rule may be applied collected in one place, since each
+              perspective allows a different interpretation of the associated
+              p-value. Here we collect many such perspectives for the
+              two-sample t-test, the WMW test and other related tests. We
+              discuss validity and consistency under each perspective and
+              discuss recommendations between the tests in light of these many
+              different perspectives. Finally, we briefly discuss a decision
+              rule for testing genetic neutrality where knowledge of the many
+              perspectives is vital to the proper interpretation of the
+              decision rule.",
+  journal  = "Stat. Surv.",
+  volume   =  4,
+  pages    = "1--39",
+  year     =  2010,
+  language = "en"
+}
+
+
